Fixes wrapped header bug - closes #79

--- a/Site/static/site.css
+++ b/Site/static/site.css
@@ -6,6 +6,11 @@ body {
   background-color: #fff;
 }
 
+/* Navbar */
+.navbar .search-query {
+    width:190px
+}
+
 /* Subnav */
 .subnav {
   width: 100%;
